...
      ]
    );
  };

  return (
    <AppBackground opacity={0.5}>
      <View style={styles.container} testID="chat-room-settings-screen">
        <ScreenHeader
          title="Room settings"
          showBackButton
          onBackPress={() => navigation.goBack()}
          showNotificationBell={false}
          showAvatar={false}
...
